--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@mantine/core": "^7.15.3",
     "@mantine/hooks": "^7.15.3",
+    "@types/plotly.js-dist": "npm:@types/plotly.js@^2.35.2",
     "axios": "^1.7.9",
+    "plotly.js-dist": "^2.35.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.6",
+    "@types/plotly.js": "^2.35.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
