--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/colors-generator": "^7.16.0",
     "@mantine/core": "^7.15.3",
     "@mantine/hooks": "^7.15.3",
     "@types/plotly.js-dist": "npm:@types/plotly.js@^2.35.2",
     "axios": "^1.7.9",
+    "chroma-js": "^3.1.2",
     "plotly.js-dist": "^2.35.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
