--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "test": "vitest",
+    "test": "vitest run && npx playwright test",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,10 +24,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@playwright/test": "^1.50.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^22.10.6",
+    "@types/node": "^22.13.4",
     "@types/plotly.js": "^2.35.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
