--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,15 +53,12 @@ jobs:
       - name: Install dependencies
         run: npm ci && npx playwright install --with-deps
 
-      - name: Run Unit tests
+      - name: Run frontend tests
         run: npm run test
-
-      - name: Run Playwright tests
-        run: npx playwright test
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
-          path: playwright-report/
+          path: /frontend/playwright-report/
           retention-days: 30
