--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,8 +53,11 @@ jobs:
       - name: Install dependencies
         run: npm ci && npx playwright install --with-deps
 
-      - name: Run frontend tests
-        run: npm run test
+      - name: Run Unit tests
+        run: npm run test:unit
+
+      - name: Run Playwright tests
+        run: npm run test:e2e
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
