--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "test": "vitest --run && npx playwright test",
-    "test:unit": "vitest --run",
+    "test": "vitest --runt",
     "test:e2e": "npx playwright test",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "backend": "cd ../backend && fastapi run"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@mantine/colors-generator": "^7.16.0",
@@ -37,6 +35,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
