--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,13 +56,6 @@ jobs:
       - name: Run Unit tests
         run: npm run test
 
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: playwright-report
-          path: frontend/playwright-report/
-          retention-days: 30
-
   test-e2e:
     runs-on: ubuntu-latest
     defaults:
@@ -75,21 +68,21 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22"
           cache: "npm"
           cache-dependency-path: "frontend/package-lock.json"
 
       - name: Install dependencies
         run: npm ci && npx playwright install --with-deps
 
-      - name: Start backend service
+      - name: Start backend server
         run: |
-          cd backend
+          cd ../backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           fastapi run &
 
-      - name: Run E2E tests
+      - name: Run Playwright tests
         run: npm run test:e2e
 
       - uses: actions/upload-artifact@v4
